# UAV_Path_Planning

example_Bspline/: CMakeLists.txt  package.xml
example_Bspline/scripts/: drone_and_ball_interfaces.py  optimiser.py  symbolic_trajectory.py  test_trajectory_node.py
interpolation_method/: CMakeLists.txt  package.xml
interpolation_method/scripts/: wayPoint_fitting.py
uav_planner/: CMakeLists.txt  package.xml
uav_planner/config/: ocp_parameters.yaml
uav_planner/launch/: optimal_planning.launch
uav_planner/plot_test/: plot_test.py
uav_planner/scripts/: ocp_planner.py
