<?xml version="1.0"?>
<package format="2">
  <name>interpolation_method</name>
  <version>0.0.1</version>
  <description>The waypoint_fitting package</description>

  <maintainer email="alessiopettinari@outlook.com">Alessio</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-geomdl</exec_depend>

  <export>
  </export>
</package>
