<?xml version="1.0"?>
<package format="2">
  <name>uav_planner</name>
  <version>0.0.1</version>
  <description>The Bspline planning package</description>

  <maintainer email="alessiopettinari@outlook.com">Alessio</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-geomdl</exec_depend>

  <export>
  </export>
</package>